`es-tabs` improvements and bug fixes
**Features**

-   Add an icon between tabs with the `interTabIcon` and `interTabIconSize` props.
-   "header-end" slot added, for placing buttons alongside tabs

**Improvements**

-   Tab sizes are now tracked, so that the indicator resizes (without animating) when the tabs are resized.
-   Tabs will now evenly collapse, and elipsis overflowing text

**Bug fixes**

-   `activeParam` prop can now be changed after initial render

--- a/packages/components/src/components/es-tabs/es-tabs.css
+++ b/packages/components/src/components/es-tabs/es-tabs.css
@@ -41,8 +41,13 @@
     }
 }
 
+header {
+    display: flex;
+    overflow: hidden;
+}
+
 .tab {
-    flex: 0 0 58px;
+    flex: 0 1 auto;
     position: relative;
     appearance: none;
     background-color: transparent;
@@ -57,6 +62,7 @@
     transition-duration: 500ms;
     transition-timing-function: ease;
     z-index: 1;
+    overflow: hidden;
 
     &::after {
         content: '';
@@ -118,4 +124,14 @@
     top: -2px;
     left: 0;
     z-index: 20000;
+}
+
+es-badge {
+    align-items: flex-start;
+}
+
+.elipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
